unpackaged/main/default/objects/WorkOrder/fields/Add_Product_to_Location__c.field-meta.xml
<CustomField>
    <fullName>Add_Product_to_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Product to Location?</label>
    <type>Checkbox</type>
</CustomField>