unpackaged/main/default/objects/WorkOrder/fields/Anticipated_Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Number_of_Days__c</fullName>
    <label>Anticipated Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>