unpackaged/main/default/objects/WorkOrder/fields/Area_Manager__c.field-meta.xml
<CustomField>
    <fullName>Area_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>