unpackaged/main/default/objects/WorkOrder/fields/Area_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Area_Manager_Email__c</fullName>
    <description>For use in alert AM of new work order. Set in Process Builder Work Order Set Area Manager</description>
    <label>Area Manager Email</label>
    <type>Email</type>
</CustomField>