unpackaged/main/default/objects/WorkOrder/fields/Area_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Area_Manager_Id__c</fullName>
    <formula>CASESAFEID(Area_Manager__r.Id)</formula>
    <label>Area Manager Id</label>
    <type>Text</type>
</CustomField>