unpackaged/main/default/objects/WorkOrder/fields/ATS_Bagged_Product_Total__c.field-meta.xml
<CustomField>
    <fullName>ATS_Bagged_Product_Total__c</fullName>
    <description>Sum of only &quot;Bagged&quot; ATS Products on the Work Order (Not Bulk)</description>
    <inlineHelpText>Sum of only &quot;Bagged&quot; ATS Products on the Work Order (Not Bulk)</inlineHelpText>
    <label>ATS Bagged Product $</label>
    <summarizedField>WorkOrderLineItem.Extended_Price__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.ATS_Bulk_Product__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Product_Code__c</field>
        <operation>notContain</operation>
        <value>JDT</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Product_Code__c</field>
        <operation>notContain</operation>
        <value>ATS SHIPPING</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>