unpackaged/main/default/objects/WorkOrder/fields/ATS_Bulk_Product_Total__c.field-meta.xml
<CustomField>
    <fullName>ATS_Bulk_Product_Total__c</fullName>
    <description>Sum of only &quot;Bulk&quot; ATS Products on the Work Order</description>
    <inlineHelpText>Sum of only &quot;Bulk&quot; ATS Products on the Work Order</inlineHelpText>
    <label>ATS Bulk Product $</label>
    <summarizedField>WorkOrderLineItem.Extended_Price__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.ATS_Bulk_Product__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>