unpackaged/main/default/objects/WorkOrder/fields/ATS_Product__c.field-meta.xml
<CustomField>
    <fullName>ATS_Product__c</fullName>
    <description>Does Not Include Shipping - otherwise all Products on &quot;SO&quot; Invoice</description>
    <inlineHelpText>Does Not Include Shipping - otherwise all Products on &quot;SO&quot; Invoice</inlineHelpText>
    <label>ATS Product $</label>
    <summarizedField>WorkOrderLineItem.Extended_Price__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Product_Code__c</field>
        <operation>notContain</operation>
        <value>JDT</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Product_Code__c</field>
        <operation>notContain</operation>
        <value>ATS SHIPPING</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>