unpackaged/main/default/objects/WorkOrder/fields/ATS_Shipping__c.field-meta.xml
<CustomField>
    <fullName>ATS_Shipping__c</fullName>
    <description>The Total Shipping Amount of Work Order Lines</description>
    <inlineHelpText>The Total Shipping Amount of Work Order Lines</inlineHelpText>
    <label>ATS Shipping $</label>
    <summarizedField>WorkOrderLineItem.Extended_Price__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Product_Code__c</field>
        <operation>contains</operation>
        <value>ATS SHIPPING</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>