unpackaged/main/default/objects/WorkOrder/fields/Bulk_Freight__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Freight__c</fullName>
    <description>JDT &quot;X&quot; item - but not true mobilization - Freight that will be on Product Order and Needs Marked Down</description>
    <inlineHelpText>JDT &quot;X&quot; item - but not true mobilization - Freight that will be on Product Order and Needs Marked Down</inlineHelpText>
    <label>Bulk Freight</label>
    <summarizedField>WorkOrderLineItem.Extended_Price__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Product_Code__c</field>
        <operation>equals</operation>
        <value>JDT-X-BULK FREIGHT</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>