unpackaged/main/default/objects/WorkOrder/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>Day the Work Order is marked closed. Populated by Process Builder Work Order: Status Change</description>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>