unpackaged/main/default/objects/WorkOrder/fields/Closed_Margin__c.field-meta.xml
<CustomField>
    <fullName>Closed_Margin__c</fullName>
    <description>The Margin of the Work Order upon being closed.</description>
    <inlineHelpText>The Margin of the Work Order upon being closed.</inlineHelpText>
    <label>Closed Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>