unpackaged/main/default/objects/WorkOrder/fields/Closed_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Closed_Margin_Percent__c</fullName>
    <description>The Margin of the Work Order upon being closed in percent.</description>
    <inlineHelpText>The Margin of the Work Order upon being closed in percent.</inlineHelpText>
    <label>Closed Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>