unpackaged/main/default/objects/WorkOrder/fields/Completed_Margin__c.field-meta.xml
<CustomField>
    <fullName>Completed_Margin__c</fullName>
    <description>The Margin of the Work Order upon being completed.</description>
    <inlineHelpText>The Margin of the Work Order upon being completed.</inlineHelpText>
    <label>Completed Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>