unpackaged/main/default/objects/WorkOrder/fields/Completed_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Completed_Margin_Percent__c</fullName>
    <description>The Margin of the Work Order upon being completed in percent.</description>
    <inlineHelpText>The Margin of the Work Order upon being completed in percent.</inlineHelpText>
    <label>Completed Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>