unpackaged/main/default/objects/WorkOrder/fields/ERP_Added__c.field-meta.xml
<CustomField>
    <fullName>ERP_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Work Order was successfully moved to ERP/Invoicing System to Begin Billing Process</description>
    <inlineHelpText>Indicates the Work Order was successfully moved to ERP/Invoicing System to Begin Billing Process</inlineHelpText>
    <label>Salespad Added?</label>
    <type>Checkbox</type>
</CustomField>