unpackaged/main/default/objects/WorkOrder/fields/ERP_Ready__c.field-meta.xml
<CustomField>
    <fullName>ERP_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Work Order is ready to be transferred to ERP/Invoicing System</description>
    <inlineHelpText>Indicates the Work Order is ready to be transferred to ERP/Invoicing System</inlineHelpText>
    <label>Salespad Ready?</label>
    <type>Checkbox</type>
</CustomField>