unpackaged/main/default/objects/WorkOrder/fields/ERP_Sales_Doc__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sales_Doc__c</fullName>
    <description>The sales document number that the work order became in the ERP/Invoicing System</description>
    <inlineHelpText>The sales document number that the work order became in the ERP/Invoicing System</inlineHelpText>
    <label>Salespad Doc #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>