unpackaged/main/default/objects/WorkOrder/fields/Est_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Invoice_Date__c</fullName>
    <description>The estimated Invoice Date based on Closed Date, or End Date of Service Appts if Closed is Blank</description>
    <formula>BLANKVALUE(Closed_Date__c,  DATEVALUE(EndDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est Invoice Date</label>
    <type>Date</type>
</CustomField>