unpackaged/main/default/objects/WorkOrder/fields/In_Progress_Hours__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Hours__c</fullName>
    <defaultValue>0.0</defaultValue>
    <inlineHelpText>Completed Service Appointment hours before work order is complete</inlineHelpText>
    <label>In Progress Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>