unpackaged/main/default/objects/WorkOrder/fields/Internal_Quip_Quote__c.field-meta.xml
<CustomField>
    <fullName>Internal_Quip_Quote__c</fullName>
    <label>Internal Quip Quote</label>
    <type>Url</type>
</CustomField>