unpackaged/main/default/objects/WorkOrder/fields/Invoicing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Notes__c</fullName>
    <label>Invoicing Notes</label>
    <type>TextArea</type>
</CustomField>