unpackaged/main/default/objects/WorkOrder/fields/JDT_Mobilization__c.field-meta.xml
<CustomField>
    <fullName>JDT_Mobilization__c</fullName>
    <description>All &quot;JDT-X&quot; Items EXCEPT Bulk Freight</description>
    <inlineHelpText>All &quot;JDT-X&quot; Items EXCEPT Bulk Freight</inlineHelpText>
    <label>JDT Mobilization $</label>
    <summarizedField>WorkOrderLineItem.Extended_Price__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Product_Code__c</field>
        <operation>contains</operation>
        <value>JDT-X</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Product_Code__c</field>
        <operation>notContain</operation>
        <value>JDT-X-BULK FREIGHT</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>