unpackaged/main/default/objects/WorkOrder/fields/JDT_Service__c.field-meta.xml
<CustomField>
    <fullName>JDT_Service__c</fullName>
    <description>Non-Mobilization Line items beginning with &quot;JDT&quot;</description>
    <label>JDT Service $</label>
    <summarizedField>WorkOrderLineItem.Extended_Price__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Product_Code__c</field>
        <operation>notContain</operation>
        <value>JDT-X-</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Product_Code__c</field>
        <operation>contains</operation>
        <value>JDT</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Product_Code__c</field>
        <operation>notContain</operation>
        <value>JDT-C-</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>