unpackaged/main/default/objects/WorkOrder/fields/Non_Inv_Product__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Product__c</fullName>
    <description>Non Inventory Product (product already on hand for use on the project)</description>
    <label>Non-Inv. Product</label>
    <summarizedField>WorkOrderLineItem.Extended_Price__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Product_Code__c</field>
        <operation>equals</operation>
        <value>JDT-C-PRODUCT</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>