unpackaged/main/default/objects/WorkOrder/fields/Opp_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Opp_Gross_Margin__c</fullName>
    <formula>Opportunity__r.Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>