unpackaged/main/default/objects/WorkOrder/fields/Opp_Margin__c.field-meta.xml
<CustomField>
    <fullName>Opp_Margin__c</fullName>
    <formula>Opportunity__r.Margin_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>