unpackaged/main/default/objects/WorkOrder/fields/Opp_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Opp_Total_Cost__c</fullName>
    <formula>Opportunity__r.Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>