unpackaged/main/default/objects/WorkOrder/fields/Product_Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Delivered_Date__c</fullName>
    <label>Product Delivered Date</label>
    <type>Date</type>
</CustomField>