unpackaged/main/default/objects/WorkOrder/fields/Product_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Delivery_Date__c</fullName>
    <inlineHelpText>If ATS Product on WO indicate when the product needs to be delivered by</inlineHelpText>
    <label>Product Delivery Date</label>
    <type>Date</type>
</CustomField>