unpackaged/main/default/objects/WorkOrder/fields/Product_Included__c.field-meta.xml
<CustomField>
    <fullName>Product_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Product Cost is included in the Labor and Charged to the Customer (pre 6/1/19 and in process invoices that have SO Invoices with 100% Markdown)</description>
    <inlineHelpText>Indicates if Product Cost is included in the Labor and Charged to the Customer (pre 6/1/19 and in process invoices that have SO Invoices with 100% Markdown)</inlineHelpText>
    <label>Product Included?</label>
    <type>Checkbox</type>
</CustomField>