unpackaged/main/default/objects/WorkOrder/fields/Product_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Ordered_Date__c</fullName>
    <label>Product Ordered Date</label>
    <type>Date</type>
</CustomField>