unpackaged/main/default/objects/WorkOrder/fields/Progress_Days_Est__c.field-meta.xml
<CustomField>
    <fullName>Progress_Days_Est__c</fullName>
    <description>Estimated Days Completed So Far</description>
    <formula>IF(!ISBLANK( Progress_Hours__c ), Progress_Hours__c / 10, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Days (Est)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>