unpackaged/main/default/objects/WorkOrder/fields/Progress_Hours__c.field-meta.xml
<CustomField>
    <fullName>Progress_Hours__c</fullName>
    <description>Service Hours Completed So Far (Updated by Roll-Up Helper)</description>
    <inlineHelpText>Service Hours Completed So Far</inlineHelpText>
    <label>Progress Hours</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>