unpackaged/main/default/objects/WorkOrder/fields/Purchasing_alerted__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_alerted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not shown on the screen. Updated by process builder work order alert purchasing. Will make it so purchasing is not alerted multiple times</description>
    <label>Purchasing alerted?</label>
    <type>Checkbox</type>
</CustomField>