unpackaged/main/default/objects/WorkOrder/fields/Quip_Product_Validation__c.field-meta.xml
<CustomField>
    <fullName>Quip_Product_Validation__c</fullName>
    <label>Quip Product Validation</label>
    <type>Url</type>
</CustomField>