unpackaged/main/default/objects/WorkOrder/fields/QuipApplicationRecordURL__c.field-meta.xml
<CustomField>
    <fullName>QuipApplicationRecordURL__c</fullName>
    <label>QuipApplicationRecordURL</label>
    <type>Url</type>
</CustomField>