unpackaged/main/default/objects/WorkOrder/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weather</fullName>
            </value>
            <value>
                <fullName>Equipment - lack of</fullName>
            </value>
            <value>
                <fullName>Equipment - OOS</fullName>
            </value>
            <value>
                <fullName>Customer responsibilities not complete</fullName>
            </value>
            <value>
                <fullName>Lack of product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>