unpackaged/main/default/objects/WorkOrder/fields/Remaining_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Remaining_to_Invoice__c</fullName>
    <description>If sent to Salespad but partially billed, enter amount remaining to Invoice to Customer</description>
    <inlineHelpText>If sent to Salespad but partially billed, enter amount remaining to Invoice to Customer</inlineHelpText>
    <label>Rem. to Invoice</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>