unpackaged/main/default/objects/WorkOrder/fields/Salespad_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Salespad_Add_Date__c</fullName>
    <description>Date Added to Salespad (Should roughly match with Doc Date of Invoice)</description>
    <label>Salespad Add Date</label>
    <type>Date</type>
</CustomField>