unpackaged/main/default/objects/WorkOrder/fields/Service_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Amount__c</fullName>
    <label>Service Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>