unpackaged/main/default/objects/WorkOrder/fields/Service_Appointment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_End_Date__c</fullName>
    <description>End date of last scheduled service appointment. Populated from flow Work Order Set Service Appointment times</description>
    <inlineHelpText>End date of last scheduled service appointment</inlineHelpText>
    <label>Service Appointment End Date</label>
    <type>DateTime</type>
</CustomField>