unpackaged/main/default/objects/WorkOrder/fields/Service_Appointment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Start_Date__c</fullName>
    <description>Latest service appointment that has been scheduled.</description>
    <inlineHelpText>Date of the latest scheduled service appointment</inlineHelpText>
    <label>Service Appointment Start Date</label>
    <type>DateTime</type>
</CustomField>