unpackaged/main/default/objects/WorkOrder/fields/Service_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Contact set on work order creation flow.</description>
    <label>Service Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>