unpackaged/main/default/objects/WorkOrder/fields/Service_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Service_Labor_Cost__c</fullName>
    <description>Flat Labor cost no difference between managers and field staff on 3/9/2020</description>
    <formula>Total_Hours__c * 153</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>