unpackaged/main/default/objects/WorkOrder/fields/Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Service_Notes__c</fullName>
    <description>Torrent Created this Field in Sandbox but did not move over to Production for some reason</description>
    <label>Service Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>