unpackaged/main/default/objects/WorkOrder/fields/Service_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory_Name__c</fullName>
    <formula>ServiceTerritory.Name</formula>
    <label>Service Territory Name</label>
    <type>Text</type>
</CustomField>