unpackaged/main/default/objects/WorkOrder/fields/Ship_To_Type__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Type__c</fullName>
    <label>Ship To Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>No Product</fullName>
            </value>
            <value>
                <fullName>Split See Notes</fullName>
            </value>
            <value>
                <fullName>Pick Up See Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>