unpackaged/main/default/objects/WorkOrder/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>Torrent failed to create this field in Production even though it was created in Sandbox and used on Report Type &quot;Work Orders with Service Appointments&quot; that was the basis for all their custom reports - used on Home Pages, etc</description>
    <formula>TEXT(Reason__c)</formula>
    <label>Status Reason</label>
    <type>Text</type>
</CustomField>