unpackaged/main/default/objects/WorkOrder/fields/Subcontracted_Work__c.field-meta.xml
<CustomField>
    <fullName>Subcontracted_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subcontracted Work</label>
    <type>Checkbox</type>
</CustomField>