unpackaged/main/default/objects/WorkOrder/fields/Target_Area__c.field-meta.xml
<CustomField>
    <fullName>Target_Area__c</fullName>
    <label>Target Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>