unpackaged/main/default/objects/WorkOrder/fields/Target_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Start_Date__c</fullName>
    <description>Populated originally on opp.</description>
    <inlineHelpText>Target start date. Set by rep originally</inlineHelpText>
    <label>Target Start Date</label>
    <type>Date</type>
</CustomField>