unpackaged/main/default/objects/WorkOrder/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Amount of the Opportunity when W.O. Created</description>
    <inlineHelpText>Amount of the Opportunity when W.O. Created</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>