unpackaged/main/default/objects/WorkOrder/fields/Total_Days_Est__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_Est__c</fullName>
    <description>Estimated number of days based on Total Hours of Completed Service Appointments</description>
    <formula>IF(!ISBLANK(Total_Hours__c), Total_Hours__c / 10, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated number of days based on Total Hours of Completed Service Appointments</inlineHelpText>
    <label>Total Days (est)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>