unpackaged/main/default/objects/WorkOrder/fields/Total_SO__c.field-meta.xml
<CustomField>
    <fullName>Total_SO__c</fullName>
    <description>The total that should be on ATS &quot;SO&quot; Product Orders - Products, Freight and Shipping</description>
    <formula>ATS_Product__c +  ATS_Shipping__c +  Bulk_Freight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total that should be on ATS &quot;SO&quot; Product Orders - Products, Freight and Shipping</inlineHelpText>
    <label>Total SO $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>