unpackaged/main/default/objects/WorkOrder/fields/Validated_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Validated_Line_Items__c</fullName>
    <description>Count of all Work Order Line Items where the cost has been Validated</description>
    <label>Validated Line Items</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Cost_Validated__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>