unpackaged/main/default/objects/WorkOrder/fields/Work_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_ID__c</fullName>
    <description>Updated by workflow and the same as the ID, for use in SmartConnect to update Work Order with the SOP number created in GP/SalesPad</description>
    <externalId>true</externalId>
    <label>Work Order ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>