unpackaged/main/default/objects/WorkOrder/fields/Work_Order_Note__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Note__c</fullName>
    <description>Use this field to indicate reason why Invoicing has not yet started</description>
    <inlineHelpText>OFFICE USE ONLY: Indicate reason why Invoicing has not yet started</inlineHelpText>
    <label>Invoicing Status</label>
    <type>TextArea</type>
</CustomField>