unpackaged/main/default/objects/WorkOrder/validationRules/Agreement_Signed_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Agreement_Signed_Required</fullName>
    <active>true</active>
    <description>Is required, If SubcontractedWork is checked</description>
    <errorConditionFormula>AND(
				 Subcontracted_Work__c,
				 !Agreement_Signed__c
)</errorConditionFormula>
    <errorMessage>Agreement Signed Is required, if Subcontracted Work is checked</errorMessage>
</ValidationRule>