unpackaged/main/default/objects/WorkOrder/validationRules/Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Required</fullName>
    <active>true</active>
    <description>Create a validation on the work order that if the Work Order is marked &quot;cannot complete&quot; or &quot;partial completion&quot; that the reason field is required</description>
    <errorConditionFormula>AND(
        OR(
                ISPICKVAL(Status, &#39;Cannot Complete&#39;),
                ISPICKVAL(Status, &#39;Partial Complete&#39;)
   ) ,
        ISBLANK( TEXT(Reason__c) ))</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Reason is required if Status is Cannot Completed or Partial Complete.</errorMessage>
</ValidationRule>